syntax = "proto3";

option java_package = "org.example.nettyDemo.Common.Proto";     // 指定包名
option java_outer_classname = "ProtobufOuter"; // 指定类名

enum MessageType{
    UserSendRequestType = 0;
    UserSendResponseType = 1;
}

message UserSendRequest{
   int32 letter_id = 1;
   enum payload_type {
       Text = 0;      // 每个枚举类型必须将其第一个类型映射为 0 作为默认值
       Binary = 1;
       Integer = 2;
   }
   payload_type type = 2;
   bytes data = 3;
   // other metadata
}

message UserSendResponse{
    int32 letter_id = 1;
    enum mq_error{
        OK = 0;
        InternalServerError = 1;
    }
    mq_error error = 2;
    string error_message = 3;
}

